# bigchess

./: README.md  index.js  package-lock.json  package.json
core/: Cargo.toml
core/src/: api.rs  backend_thread.rs  cli_arguments.rs  engine.rs  errors.rs  game.rs  json_stdio.rs  lib.rs  main.rs  routes.rs  state.rs  stdio.rs
electron/: index.js  package-lock.json  package.json
electron/lib/: main_window.html
electron/lib/css/: themes.css
electron/lib/js/: backend.js  main_window.js
lib/: main_window.html  styles_source.css
lib/css/: themes.css
lib/js/: backend.js  main_window.js
native/: Cargo.toml
native/src/: backend_thread.rs  errors.rs  game.rs  lib.rs  routes.rs  state.rs
native/src/backend/: errors.rs  game.rs  mod.rs  routes.rs
