[package]
name = "bigchess-core"
version = "0.1.0"
authors = ["Alexandre Gauthier <alexandre.gauthier12@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.1"
shakmaty = "0.16"
rand = "0.7"

[dev-dependencies]
insta = {version = "0.16.1", features = ["redactions"]}